(lang dune 3.11)

(name AOC)

(generate_opam_files true)

(source
 (github gersonfaneto/Codeground))

(authors "Gerson Ferreira")

(maintainers "Gerson Ferreira")

(license MIT)

(package
 (name AOC)
 (synopsis "Advent of Code 2023")
 (description "Solutions for Advent of Code 2023 in OCaml!")
 (depends ocaml dune core ppx_deriving)
 (tags
  (aoc)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
